--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -10,11 +10,11 @@ const { ...props } = Astro.props as Props;
 
 <div {...props}>
 	<header>
-		<h1 class="font-black uppercase mb-12">
+		<h2 class="text-4xl font-black uppercase mb-12">
 			<span>Os</span>
 			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">serviços</span>
 			<span> que fazemos</span>
-		</h1>
+		</h2>
 	</header>
 
 	<section class="my-8 grid grid-cols-1 md:grid-cols-2 gap-16 md:gap-24 content-around">
