--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -17,12 +17,12 @@ const { ...props } = Astro.props as Props;
 
 <div {...props}>
 	<header>
-		<h1 class="font-black uppercase">
+		<h2 class="text-4xl font-black uppercase">
 			<span>A tripulação</span>
-		</h1>
-		<p class="text-2xl mb-12">
+		</h2>
+		<h3 class="mb-12">
 			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Nosso incrível time</span>
-		</p>
+		</h3>
 	</header>
 
 	<section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16 text-justify my-16">
