--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,6 +1,10 @@
 ---
-import HeroProject from '@widgets/HeroProject.astro';
 import Layout from '@layouts/BaseLayout.astro';
+
+import ProjectHero from '@widgets/projects/ProjectHero.astro';
+import ProjectCarousel from '@widgets/projects/ProjectCarousel.astro';
+import ProjectDetails from '@/components/widgets/projects/ProjectDetails.astro';
+import ProjectPartners from '@/components/widgets/projects/ProjectPartners.astro';
 
 type Props = {
 	title: string;
@@ -10,13 +14,20 @@ const { title } = Astro.props as Props;
 ---
 
 <Layout>
-	<HeroProject />
-	<main>
-		<article class="spacewiz__container px-6">
-			<h1 class="font-black uppercase mb-12">
-				<span>Galeria</span>
-			</h1>
-			<slot />
-		</article>
-	</main>
+	<div class="h-full spacewiz__container spacewiz__bg">
+		
+		<ProjectHero />
+
+		<div class="py-8">
+			<ProjectPartners />
+		</div>
+
+		<div class="py-8">
+			<ProjectCarousel />
+		</div>
+
+		<div class="py-8">
+			<ProjectDetails />
+		</div>
+	</div>
 </Layout>
