erro de digitação

--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -55,7 +55,7 @@ const lorem = new LoremIpsum(
 		<p>
 			Space Wizard Studios
 			<br>
-			Desenvolvento com magia e tecnologia desde 2020
+			Desenvolvendo com magia e tecnologia desde 2020
 			<br>
 			<a href="mailto:contato@spacewiz.dev">contato@spacewiz.dev</a>
 		</p>
