--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -23,6 +23,6 @@ export async function getStaticPaths() {
 const { page } = Astro.props;
 ---
 
-<Layout title={page.frontmatter.title}>
+<Layout>
 	<page.Content />
 </Layout>
