--- a/src/components/widgets/projects/ProjectDetails.astro
+++ b/src/components/widgets/projects/ProjectDetails.astro
@@ -1,36 +1,45 @@
-<h1 class="spacewiz__text--reversed my-4">Detalhes técnicos</h1>
+---
+type Props = {};
 
-<article class="grid grid-cols-1 md:grid-cols-2 gap-8">
-	<div
-		class="card relative w-full h-full overflow-visible p-6 shadow-md shadow-sw-navy/25 dark:shadow-sw-flamingo-700/10 transition-shadow duration-500 bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary"
-	>
-		<h3 class="mb-4">Sobre o projeto</h3>
-		<p>
-			Com o objetivo de capturar leads para o cliente, os estudantes puderam acompanhar a conteúdos exclusivos
-			oferecidos na plataforma (material didático, video-aulas e etc).
-		</p>
-	</div>
+const { ...props } = Astro.props as Props;
+---
 
-	<div
-		class="card relative w-full h-full overflow-visible p-6 shadow-md shadow-sw-navy/25 dark:shadow-sw-flamingo-700/10 transition-shadow duration-500 bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary"
-	>
-		<h3 class="mb-4">Tecnologias</h3>
-		<ul class="p-4">
-			<li>
-				Desenvolvido em <b>Wordpress</b> e <b>Elementor</b>.
-				<ul class="mt-4 ml-8 list-disc">
-					<li>Cadastro em Newsletter;</li>
-					<li>Boas práticas LGPD;</li>
-					<li>Animações em CSS</li>
-					<li>Design responsivo;</li>
-					<li>Simulado de prova (ENADE).</li>
-				</ul>
-			</li>
-		</ul>
+<div {...props}>
+
+	<h1 class="spacewiz__text--reversed my-4">Detalhes técnicos</h1>
+
+	<article class="grid grid-cols-1 md:grid-cols-2 gap-8">
 		<div
-			class="flex absolute bottom-4 right-4 w-32 h-32 items-center justify-center shadow-inner bg-sw-secondary-900 dark:bg-sw-primary-900 rounded-xl"
+			class="card relative w-full h-full overflow-visible p-6 shadow-md shadow-sw-navy/25 dark:shadow-sw-flamingo-700/10 transition-shadow duration-500 bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary"
 		>
-			icones
+			<h3 class="mb-4">Sobre o projeto</h3>
+			<p>
+				Com o objetivo de capturar leads para o cliente, os estudantes puderam acompanhar a conteúdos exclusivos
+				oferecidos na plataforma (material didático, video-aulas e etc).
+			</p>
 		</div>
-	</div>
-</article>
+
+		<div
+			class="card relative w-full h-full overflow-visible p-6 shadow-md shadow-sw-navy/25 dark:shadow-sw-flamingo-700/10 transition-shadow duration-500 bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary"
+		>
+			<h3 class="mb-4">Tecnologias</h3>
+			<ul class="p-4">
+				<li>
+					Desenvolvido em <b>Wordpress</b> e <b>Elementor</b>.
+					<ul class="mt-4 ml-8 list-disc">
+						<li>Cadastro em Newsletter;</li>
+						<li>Boas práticas LGPD;</li>
+						<li>Animações em CSS</li>
+						<li>Design responsivo;</li>
+						<li>Simulado de prova (ENADE).</li>
+					</ul>
+				</li>
+			</ul>
+			<div
+				class="flex absolute bottom-4 right-4 w-32 h-32 items-center justify-center shadow-inner bg-sw-secondary-900 dark:bg-sw-primary-900 rounded-xl"
+			>
+				icones
+			</div>
+		</div>
+	</article>
+</div>
