partners carousel & details props

--- a/src/components/widgets/projects/ProjectHero.astro
+++ b/src/components/widgets/projects/ProjectHero.astro
@@ -5,26 +5,28 @@ type Props = {
 	heroSrc: string;
 };
 
-const { heroSrc } = Astro.props as Props;
+const { heroSrc, ...props } = Astro.props as Props;
 ---
 
-<section class="grid grid-cols-1 md:grid-cols-2 w-full h-full">
-	<div class="flex items-center">
-		<div class="card spacewiz__text--reversed">
-			<h1 class="inline-flex flex-col text-4xl font-black">
-				<span>Projeto:</span><span><slot name="title" /></span>
-			</h1>
-			<h2 class="mt-4">
-				<slot name="subtitle" />
-			</h2>
-		</div>
-	</div>
-
-	<div class="py-8">
-		<figure class="flex items-center justify-center">
-			<div class="card shadow-md rounded-xl overflow-hidden">
-				<Image class="w-full" fit="cover" aspectRatio="16:9" format="webp" src={heroSrc} alt="" />
+<div {...props}>
+	<section class="grid grid-cols-1 md:grid-cols-2 w-full h-full">
+		<div class="flex items-center">
+			<div class="card spacewiz__text--reversed">
+				<h1 class="inline-flex flex-col text-4xl font-black">
+					<span>Projeto:</span><span><slot name="title" /></span>
+				</h1>
+				<h2 class="mt-4">
+					<slot name="subtitle" />
+				</h2>
 			</div>
-		</figure>
-	</div>
-</section>
+		</div>
+
+		<div class="py-8">
+			<figure class="flex items-center justify-center">
+				<div class="card shadow-md rounded-xl overflow-hidden">
+					<Image class="w-full" fit="cover" aspectRatio="16:9" format="webp" src={heroSrc} alt="" />
+				</div>
+			</figure>
+		</div>
+	</section>
+</div>
