--- a/src/components/widgets/projects/ProjectPartners.astro
+++ b/src/components/widgets/projects/ProjectPartners.astro
@@ -1,28 +1,30 @@
 ---
 import { Image } from '@astrojs/image/components';
 
-import heroProject from '@images/projects/quasecalouro_hero.png';
-import partner from '@images/spacewiz_logo_horizontal_negative.svg';
+type PartnersProps = {
+	src: string;
+	description: string;
+};
 
-type Props = {};
+type Props = {
+	partners: PartnersProps[];
+};
 
-const { ...props } = Astro.props as Props;
+const { partners, ...props } = Astro.props as Props;
 ---
 
 <div {...props}>
-
 	<h1 class="spacewiz__text--reversed my-4">Parceiros</h1>
-
 	<section class="p-6 bg-sw-primary-700 rounded-xl">
 		<div class="grid grid-rows-1 grid-flow-col gap-4">
-			<div>
-				<img class="w-32" src={partner} alt="" />
-				<p class="text-white">Responsável por</p>
-			</div>
-			<div>
-				<img class="w-32" src={partner} alt="" />
-				<p class="text-white">Responsável por</p>
-			</div>
+			{
+				partners.map((partner) => (
+					<div>
+						<img class="w-32" src={partner.src} alt="" />
+						<p class="text-white">{partner.description}</p>
+					</div>
+				))
+			}
 		</div>
 	</section>
 </div>
