--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -7,7 +7,7 @@ const {} = Astro.props as Props;
 ---
 
 <Layout>
-	<div class="h-full spacewiz__container spacewiz__bg spacewiz__text--reversed">
+	<div class="h-full spacewiz__container spacewiz__bg spacewiz__text--reversed mb-20 rounded-b-lg shadow-xl">
 		<slot />
 	</div>
 </Layout>
