--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -7,7 +7,9 @@ const {} = Astro.props as Props;
 ---
 
 <Layout>
-	<div class="h-full spacewiz__container spacewiz__bg spacewiz__text--reversed mb-20 rounded-b-lg shadow-xl">
-		<slot />
+	<div class="h-full spacewiz__container">
+		<div class="spacewiz__text overflow-hidden  bg-sw-secondary-100 dark:bg-sw-primary-700">
+			<slot />
+		</div>
 	</div>
 </Layout>
