--- a/src/components/widgets/projects/ProjectDetails.astro
+++ b/src/components/widgets/projects/ProjectDetails.astro
@@ -5,24 +5,24 @@ const { ...props } = Astro.props as Props;
 ---
 
 <div {...props}>
-	<h1 class="spacewiz__text--reversed my-4">Detalhes técnicos</h1>
 	<article class="grid grid-cols-1 md:grid-cols-2 gap-8">
 		<div
-			class="card relative w-full h-full overflow-visible p-6 shadow-md shadow-sw-navy/25 dark:shadow-sw-flamingo-700/10 transition-shadow duration-500 bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary"
+			class="card relative w-full h-full overflow-visible p-6 bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary"
 		>
-			<h3 class="mb-2">Sobre o projeto</h3>
+			<h3 class="mb-2 spacewiz__text--accent">Sobre o projeto</h3>
 			<slot name="about" />
 		</div>
 
 		<div
-			class="card relative w-full h-full overflow-visible p-6 shadow-md shadow-sw-navy/25 dark:shadow-sw-flamingo-700/10 transition-shadow duration-500 bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary"
+			class="card relative w-full h-full overflow-visible p-6 bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary"
 		>
-			<h3 class="mb-2">Tecnologias</h3>
-			<ul class="px-4">
-				<slot name="techs" />
-				<li>
-					<slot name="techsList" />
-				</li>
+			<h3 class="mb-2 spacewiz__text--accent">Tecnologias</h3>
+			<ul class="list-disc">
+				<slot name="techs">
+					<li class="mt-1 ml-8 list-disc">
+						<slot name="techsList" />
+					</li>
+				</slot>
 			</ul>
 			<div
 				class="flex absolute bottom-4 right-4 w-32 h-32 items-center justify-center shadow-inner bg-sw-secondary-900 dark:bg-sw-primary-900 rounded-xl"
