--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -8,8 +8,8 @@ const {} = Astro.props as Props;
 
 <Layout>
 	<div class="h-full spacewiz__container">
-		<div class="spacewiz__text overflow-hidden  bg-sw-secondary-100 dark:bg-sw-primary-700">
-			<slot />
+		<div class="spacewiz__text bg-sw-secondary-100 dark:bg-sw-primary-700">
+			<slot/>
 		</div>
 	</div>
 </Layout>
