--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,14 +1,16 @@
-@import "focus";
-@import "scrollbar";
-@import "spacewiz";
-@import "text";
-@import "toggle";
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
+
+	@import "focus";
+	@import "project";
+	@import "scrollbar";
+	@import "spacewiz";
+	@import "text";
+	@import "toggle";
+
 	h1 {
 		@apply text-4xl;
 	}
