--- a/src/components/widgets/projects/ProjectCarousel.astro
+++ b/src/components/widgets/projects/ProjectCarousel.astro
@@ -19,11 +19,8 @@ const { images, ...props } = Astro.props as Props;
 		{
 			images.map((image) => (
 				<div class="card w-1/3 overflow-hidden spacewiz__bg--reversed spacewiz__text bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary">
-					<img class="max-h-40" src={image.src} />
-					<div class="p-6">
-						<h4>{image.title}</h4>
-						<p>{image.description}</p>
-					</div>
+					<img class="h-40" src={image.src} />
+
 				</div>
 			))
 		}
