teste de build com o /* @vite-ignore */

--- a/src/components/widgets/projects/ProjectPartners.astro
+++ b/src/components/widgets/projects/ProjectPartners.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from '@astrojs/image/components';
 
-type PartnersProps = {
+export type PartnersProps = {
 	src: string;
 	description: string;
 };
