--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,15 +1,40 @@
 ---
 import Layout from '@layouts/BaseLayout.astro';
 
-type Props = {};
+import { Image } from '@astrojs/image/components';
+import ProjectPartners from '@widgets/projects/ProjectPartners.astro';
+import ProjectCarousel from '@widgets/projects/ProjectSimplyCarousel';
 
-const {} = Astro.props as Props;
+import type { PartnersProps } from '@widgets/projects/ProjectPartners.astro';
+
+type Props = {
+	heroSrc: string;
+	partners: PartnersProps[];
+};
+
+const { heroSrc, partners } = Astro.props as Props;
 ---
 
 <Layout>
 	<div class="h-full spacewiz__container">
 		<div class="spacewiz__text bg-sw-secondary-100 dark:bg-sw-primary-700">
-			<slot/>
+			<figure class="h-full w-full">
+				<Image
+					src={import(/* @vite-ignore */ `../assets/images/projects/${heroSrc}.png`)}
+					fit="cover"
+					aspectRatio="16:9"
+					width="600"
+					format="webp"
+					alt=""
+				/>
+			</figure>
+
+			<article class="project p-6">
+				<slot />
+			</article>
+
+			<ProjectCarousel client:only="react" />
+			<!-- <ProjectPartners partners={partners} /> -->
 		</div>
 	</div>
 </Layout>
