--- a/src/components/widgets/projects/ProjectCarousel.astro
+++ b/src/components/widgets/projects/ProjectCarousel.astro
@@ -1,28 +1,10 @@
 ---
-import { Image } from '@astrojs/image/components';
+import SimpleCarousel from '@atoms/SimpleCarousel';
+import type { CarouselProps } from '@atoms/SimpleCarousel';
 
-type ImageProps = {
-	src: string;
-	title: string;
-	description: string;
-};
-
-type Props = {
-	images: ImageProps[];
-};
-
-const { images, ...props } = Astro.props as Props;
+const { images, ...props } = Astro.props as CarouselProps;
 ---
 
 <div {...props}>
-	<figure class="flex w-full gap-4">
-		{
-			images.map((image) => (
-				<div class="card w-1/3 overflow-hidden spacewiz__bg--reversed spacewiz__text bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary">
-					<img class="h-40" src={image.src} />
-
-				</div>
-			))
-		}
-	</figure>
+	<SimpleCarousel images={images} client:load />
 </div>
