--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,40 +1,32 @@
 ---
 import Layout from '@layouts/BaseLayout.astro';
 
-import { Image } from '@astrojs/image/components';
+import ProjectHero from '@widgets/projects/ProjectHero.astro';
+import ProjectCarousel from '@widgets/projects/ProjectCarousel.astro';
 import ProjectPartners from '@widgets/projects/ProjectPartners.astro';
-import ProjectCarousel from '@widgets/projects/ProjectSimplyCarousel';
-
+import type { ImageProps } from '@widgets/projects/ProjectCarousel.astro';
 import type { PartnersProps } from '@widgets/projects/ProjectPartners.astro';
 
 type Props = {
-	heroSrc: string;
-	partners: PartnersProps[];
+	hero?: string;
+	carousel?: ImageProps[];
+	partners?: PartnersProps[];
 };
 
-const { heroSrc, partners } = Astro.props as Props;
+const { hero, carousel, partners } = Astro.props as Props;
 ---
 
 <Layout>
 	<div class="h-full spacewiz__container">
 		<div class="spacewiz__text bg-sw-secondary-100 dark:bg-sw-primary-700">
-			<figure class="h-full w-full">
-				<Image
-					src={import(/* @vite-ignore */ `../assets/images/projects/${heroSrc}.png`)}
-					fit="cover"
-					aspectRatio="16:9"
-					width="600"
-					format="webp"
-					alt=""
-				/>
-			</figure>
+			{hero && <ProjectHero src={hero} />}
 
 			<article class="project p-6">
 				<slot />
 			</article>
 
-			<ProjectCarousel client:only="react" />
-			<!-- <ProjectPartners partners={partners} /> -->
+			{carousel && <ProjectCarousel images={carousel} />}
+			{partners && <ProjectPartners partners={partners} />}
 		</div>
 	</div>
 </Layout>
