--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -23,6 +23,6 @@ export async function getStaticPaths() {
 const { page } = Astro.props;
 ---
 
-<Layout heroSrc={page.frontmatter.heroSrc} partners={page.frontmatter.partners}>
+<Layout hero={page.frontmatter.hero} carousel={page.frontmatter.carousel} partners={page.frontmatter.partners}>
 	<page.Content />
 </Layout>
