--- a/src/components/widgets/projects/ProjectHero.astro
+++ b/src/components/widgets/projects/ProjectHero.astro
@@ -11,9 +11,10 @@ const { src } = Astro.props as Props;
 <figure class="h-full w-full">
 	<Image
 		src={import(/* @vite-ignore */ `../../../assets/images/projects/${src}.png`)}
+		class="w-full"
 		fit="cover"
-		aspectRatio="16:9"
-		width="600"
+		aspectRatio="16/9"
+		width="1080"
 		format="webp"
 		alt=""
 	/>
