--- a/src/components/widgets/projects/ProjectPartners.astro
+++ b/src/components/widgets/projects/ProjectPartners.astro
@@ -13,23 +13,21 @@ type Props = {
 const { partners, ...props } = Astro.props as Props;
 ---
 
-<div {...props}>
-	<section class="flex w-full p-8 gap-4 items-center justify-center bg-sw-coal text-white">
-		{
-			partners.map(({ src, description }) => (
-				<div>
-					<Image
-						class="w-32"
-						src={import(/* @vite-ignore */ `../../../assets/images/projects/${src}.png`)}
-						fit="cover"
-						aspectRatio="16:9"
-						width="300"
-						format="webp"
-						alt=""
-					/>
-					<p>{description}</p>
-				</div>
-			))
-		}
-	</section>
-</div>
+<section class="flex w-full gap-4 items-center justify-center py-8 spacewiz__text" {...props}>
+	{
+		partners.map(({ src, description }) => (
+			<div>
+				<Image
+					class="w-32"
+					src={import(/* @vite-ignore */ `../../../assets/images/projects/${src}.png`)}
+					fit="cover"
+					aspectRatio="16:9"
+					width="300"
+					format="webp"
+					alt=""
+				/>
+				<p>{description}</p>
+			</div>
+		))
+	}
+</section>
