--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -41,8 +41,7 @@ const projects = await getProjects();
 						{new Date(page.frontmatter.date ?? '').toLocaleDateString('pt-BR', {
 							timeZone: 'UTC',
 							year: 'numeric',
-							month: 'long',
-							day: '2-digit',
+							month: 'long'
 						})}
 					</div>
 				</div>
