--- a/src/assets/styles/project.scss
+++ b/src/assets/styles/project.scss
@@ -1,27 +1,31 @@
 .project {
 
-    h1 {
-        @apply text-center;
-    }
+	h1 {
+		@apply pt-8 text-center;
+	}
 
-    blockquote {
-        @apply text-center pb-8;
+	blockquote {
+		@apply text-center pb-4;
 
-        strong {
-            @apply spacewiz__text--accent;
-        }
+		strong {
+			@apply spacewiz__text--accent;
+		}
 
-    }
+	}
 
-    h2 {
-        @apply pl-6 spacewiz__text--accent;
-    }
+	h2 {
+		@apply pt-8 pb-4 spacewiz__text--accent;
 
-    p {
-        @apply pl-8 pb-4;
-    }
+		&:not(:first-child) {
+			@apply pt-4;
+		}
+	}
 
-    ul {
-        @apply list-disc pl-16;
-    }
+	p {
+		@apply pl-8 pb-2;
+	}
+
+	ul {
+		@apply list-disc pl-16;
+	}
 }
