--- a/src/components/widgets/projects/ProjectPartners.astro
+++ b/src/components/widgets/projects/ProjectPartners.astro
@@ -13,21 +13,24 @@ type Props = {
 const { partners, ...props } = Astro.props as Props;
 ---
 
-<section class="flex w-full gap-4 items-center justify-center py-8 spacewiz__text" {...props}>
-	{
-		partners.map(({ src, description }) => (
-			<div>
-				<Image
-					class="w-32"
-					src={import(/* @vite-ignore */ `../../../assets/images/projects/${src}.png`)}
-					fit="cover"
-					aspectRatio="16:9"
-					width="300"
-					format="webp"
-					alt=""
-				/>
-				<p>{description}</p>
-			</div>
-		))
-	}
+<section class="px-8" {...props}>
+	<h2>Devs</h2>
+	<div class="flex w-full gap-4">
+		{
+			partners.map(({ src, description }) => (
+				<div>
+					<Image
+						class="w-32"
+						src={import(/* @vite-ignore */ `../../../assets/images/projects/${src}.png`)}
+						fit="cover"
+						aspectRatio="16:9"
+						width="300"
+						format="webp"
+						alt=""
+					/>
+					<p>{description}</p>
+				</div>
+			))
+		}
+	</div>
 </section>
