--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -17,16 +17,16 @@ const { hero, carousel, partners } = Astro.props as Props;
 ---
 
 <Layout>
-	<div class="h-full spacewiz__container">
-		<div class="spacewiz__text bg-sw-secondary-100 dark:bg-sw-primary-700 pb-8">
+	<div class="min-h-screen spacewiz__container project">
+		<div class="pb-8 h-full bg-sw-secondary-100 dark:bg-sw-primary-700">
 			{hero && <ProjectHero src={hero} />}
 
-			<article class="project p-6">
+			<article class="px-8">
 				<slot />
 			</article>
 
-			{partners && <ProjectPartners partners={partners} />}
 			{carousel && <ProjectCarousel images={carousel} class="px-8"/>}
+			{partners && <ProjectPartners partners={partners}/>}
 		</div>
 	</div>
 </Layout>
