sem export nos Props normais

--- a/src/components/widgets/projects/ProjectCarousel.astro
+++ b/src/components/widgets/projects/ProjectCarousel.astro
@@ -8,7 +8,7 @@ export type ImageProps = {
 	description: string;
 };
 
-export type Props = CarouselProps & {
+type Props = CarouselProps & {
 	[props: string]: any;
 };
 
