--- a/src/components/widgets/projects/ProjectPartners.astro
+++ b/src/components/widgets/projects/ProjectPartners.astro
@@ -14,7 +14,7 @@ type Props = {
 const { partners, ...props } = Astro.props as Props;
 ---
 
-<section class="px-8" {...props}>
+<section {...props}>
 	<h2>Devs</h2>
 	<div class="flex w-full gap-4">
 		{
