--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,9 +1,9 @@
+/* stylelint-disable no-invalid-position-at-import-rule */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-
 	@import "focus";
 	@import "project";
 	@import "scrollbar";
