--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -16,9 +16,9 @@ const { ...props } = Astro.props as Props;
 
 	<section class="grid grid-cols-1 md:grid-cols-2 gap-8 ">
 		<div
-			class="card card-compact shadow-lg relative overflow-visible bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800"
+			class="flex shadow-lg relative overflow-visible bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800"
 		>
-			<div class="card-body justify-center relative">
+			<div class="flex justify-center relative">
 				<h4>Um pouquinho sobre a spacewiz:</h4>
 				<ul class="list-disc px-8">
 					<li class="pb-4">
