--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -6,7 +6,7 @@
 @layer base {
 	@import "focus";
 	@import "project";
-	@import "single-page";
+	@import "policy";
 	@import "scrollbar";
 	@import "spacewiz";
 	@import "text";
