--- a/src/pages/policies/[slug].astro
+++ b/src/pages/policies/[slug].astro
@@ -24,7 +24,7 @@ const { page } = Astro.props;
 ---
 
 <Layout>
-	<div class="min-h-screen spacewiz__container single-page">
+	<div class="min-h-screen spacewiz__container policy">
 		<div class="pb-8 h-full bg-sw-secondary-100 dark:bg-sw-primary-700">
 			<article class="px-8">
 				<page.Content />
