--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -64,10 +64,10 @@
 					<p class="mb-3 font-semibold uppercase text-white">Lenga lenga Jurídico</p>
 					<ul class="text-gray-400">
 						<li class="my-2">
-							<a class="hover:underline" href="#">Políticas de Privacidade</a>
+							<a class="hover:underline" href="/policies/privacy">Políticas de Privacidade</a>
 						</li>
 						<li class="my-2">
-							<a class="hover:underline" href="#">Termos de Uso</a>
+							<a class="hover:underline" href="/policies/terms">Termos de Uso</a>
 						</li>
 					</ul>
 				</div>
