--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -2,7 +2,7 @@
 	<section class="w-full py-8 bg-sw-coal-500">
 		<div class="flex flex-col spacewiz__container bg-sw-coal-500">
 			<div class="h-full grid grid-cols-4 gap-8">
-				<div class="h-full grid grid-flow-row justify-around">
+				<div>
 					<p class="mb-3 font-semibold uppercase text-white">Portifólio</p>
 					<ul class="text-gray-400">
 						<li class="my-2">
@@ -47,7 +47,7 @@
 							</svg>
 							<span class="sr-only">Instagram page</span>
 						</a>
-						<a href="#" class="text-gray-500 hover:text-white" >
+						<a href="https://github.com/Space-Wizard-Studios/sw-site/" class="text-gray-500 hover:text-white" >
 							<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 								<path
 									fill-rule="evenodd"
@@ -64,7 +64,7 @@
 					<p class="mb-3 font-semibold uppercase text-white">Lenga lenga Jurídico</p>
 					<ul class="text-gray-400">
 						<li class="my-2">
-							<a class="hover:underline" href="/policies/privacy">Políticas de Privacidade</a>
+							<a class="hover:underline" href="/policies/privacy">Privacidade e Cookies</a>
 						</li>
 						<li class="my-2">
 							<a class="hover:underline" href="/policies/terms">Termos de Uso</a>
@@ -83,10 +83,12 @@
 	</section>
 
 	<section class="w-full py-4 bg-sw-coal-600 border-0 border-t-2 border-white">
-		<div class="flex items-center justify-center spacewiz__container">
-			<span class="text-gray-400"
-				>2023 <a href="/" class="hover:underline">Space Wizard Studios</a>. Todos os direitos reservados.
-			</span>
+		<div class="flex items-center justify-center spacewiz__container text-center">
+			<p class="text-gray-400">
+				2023 - Space Wizard Studios
+				<br>
+				<span class="text-light text-xs">Este é um projeto de código aberto, acesse <a href="https://github.com/Space-Wizard-Studios/sw-site/" class="hover:underline">o repositório</a>!</span>
+			</p>
 		</div>
 	</section>
 </footer>
