--- a/src/pages/policies/[slug].astro
+++ b/src/pages/policies/[slug].astro
@@ -25,8 +25,8 @@ const { page } = Astro.props;
 
 <Layout>
 	<div class="min-h-screen spacewiz__container policy">
-		<div class="pb-8 h-full bg-sw-secondary-100 dark:bg-sw-primary-700">
-			<article class="px-8">
+		<div class="pb-8 h-full bg-sw-secondary-200 dark:bg-sw-primary-700">
+			<article class="px-4 md:px-8">
 				<page.Content />
 			</article>
 		</div>
