--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -35,4 +35,9 @@
 	h6 {
 		@apply text-base;
 	}
+
+	a:not(footer a) {
+		@apply font-semibold decoration-1 underline underline-offset-2 transition-all;
+		@apply spacewiz__decoration dark:spacewiz__decoration--reversed;
+	}
 }
