--- a/src/layouts/PoliciesPageLayout.astro
+++ b/src/layouts/PoliciesPageLayout.astro
@@ -1,13 +1,11 @@
 ---
 import Layout from '@layouts/BaseLayout.astro';
-import Hero from '@widgets/Hero.astro';
 import DividerArrowDown from '@atoms/dividers/DividerArrowDown.astro';
 ---
 
 <Layout>
-	<Hero />
 	<main>
 		<slot />
+		<DividerArrowDown class="fill-sw-secondary-200 dark:fill-sw-primary-700 bg-sw-coal-500" />
 	</main>
-	<DividerArrowDown class="spacewiz__fill--reversed bg-sw-coal-500" />
 </Layout>
