--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const { meta = {} } = Astro.props;
 		<MetaTags {...meta} />
 	</head>
 
-	<body class="antialiased py-1 md:py-0 spacewiz__bg--reversed spacewiz__text align-middle">
+	<body class="spacewiz__bg--reversed spacewiz__text align-middle">
 		<Header />
 
 		<main class="overflow-x-hidden min-h-[100vh]">
