Fix da Animação no Card de TeamMember - Container sempre tem o tamanho correto - Transição corrigida

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -36,7 +36,7 @@
 		@apply text-base;
 	}
 
-	a:not(footer a) {
+	p > a {
 		@apply font-semibold decoration-1 underline underline-offset-2 transition-all;
 		@apply spacewiz__decoration dark:spacewiz__decoration--reversed;
 	}
