--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -17,7 +17,7 @@ const { src: defaultImage } = await getImage({
 });
 const {
 	title = SITE.name,
-	description = '',
+	description = SITE.description,
 	image: _image = defaultImage,
 	canonical,
 	noindex = false,
