--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import DividerRect from '@atoms/dividers/DividerRect.astro';
 		<Team />
 	</section>
 
-	<!-- TODO <section class="spacewiz__container my-16">
+	<section class="spacewiz__container my-16 ">
 		<Contact />
-	</section> -->
+	</section>
 </Layout>
