--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -20,11 +20,11 @@ const { ...props } = Astro.props as Props;
 	</header>
 
 	<section class="flex my-8 text-justify">
-		<div class="w-full h-96 flex">
+		<div class="w-full flex">
 			<div class="w-full h-auto bg-sw-coal hidden lg:block lg:w-2/5 rounded-l-2xl overflow-hidden">
-				<Image class="w-full h-full" fit="cover" format="webp" src={contactImage} alt="" />
+				<Image class="w-full h-full" fit="contain" format="webp" src={contactImage} alt="" />
 			</div>
-			<div class="w-full p-4 rounded-2xl lg:rounded-l-none shadow-md bg-sw-secondary-700 dark:bg-sw-primary-700">
+			<div class="w-full p-4 rounded-2xl lg:rounded-l-none shadow-md bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800">
 				<p>
 					Entre em contato através do endereço
 					<a href="mailto:contato@spacewiz.dev?subject=Contato&body=Olá! Gostaria de entrar em contato.">contato@spacewiz.dev</a>.
