padronização de títulos da home

--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -8,10 +8,12 @@ const { ...props } = Astro.props as Props;
 
 <div {...props}>
 	<header>
-		<h2 class="text-4xl font-black uppercase mb-12">
-			<span>Sobre</span>
-			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">nós</span>
+		<h2 class="text-4xl font-black uppercase">
+			<span>Sobre nós</span>
 		</h2>
+		<h3 class="mb-12">
+			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Encantamos com tecnologia ❤</span>
+		</h3>
 	</header>
 
 	<section class="grid grid-cols-1 md:grid-cols-2 gap-8 ">
