--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -18,10 +18,10 @@ const { ...props } = Astro.props as Props;
 <div {...props}>
 	<header>
 		<h2 class="text-4xl font-black uppercase">
-			<span>A tripulação</span>
+			<span>Quem somos</span>
 		</h2>
 		<h3 class="mb-12">
-			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Nosso incrível time</span>
+			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Essa é a nossa tripulação</span>
 		</h3>
 	</header>
 
