--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -10,11 +10,12 @@ const { ...props } = Astro.props as Props;
 
 <div {...props}>
 	<header>
-		<h2 class="text-4xl font-black uppercase mb-12">
-			<span>Os</span>
-			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">serviços</span>
-			<span> que fazemos</span>
+		<h2 class="text-4xl font-black uppercase">
+			<span>Nossos serviços</span>
 		</h2>
+		<h3 class="mb-12">
+			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Um resumo do que desenvolvemos</span>
+		</h3>
 	</header>
 
 	<section class="my-8 grid grid-cols-1 md:grid-cols-2 gap-16 md:gap-24 content-around">
