--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -1,4 +1,6 @@
 ---
+import { Icon } from 'astro-icon';
+
 import { Image } from '@astrojs/image/components';
 import contactImage from '@images/cosmonaut_suit.png';
 
@@ -19,16 +21,61 @@ const { ...props } = Astro.props as Props;
 		</h3>
 	</header>
 
-	<section class="flex my-8 text-justify">
+	<section class="flex my-8">
 		<div class="w-full flex">
 			<div class="w-full h-auto bg-sw-coal hidden lg:block lg:w-2/5 rounded-l-2xl overflow-hidden">
 				<Image class="w-full h-full" fit="contain" format="webp" src={contactImage} alt="" />
 			</div>
-			<div class="w-full p-4 rounded-2xl lg:rounded-l-none shadow-md bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800">
-				<p>
-					Entre em contato através do endereço
-					<a href="mailto:contato@spacewiz.dev?subject=Contato&body=Olá! Gostaria de entrar em contato.">contato@spacewiz.dev</a>.
-				</p>
+			<div
+				class="flex items-center content-center w-full p-4 lg:p-8 rounded-2xl lg:rounded-l-none shadow-md bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800"
+			>
+				<div class="grid grid-cols-1 gap-4 lg:gap-8">
+					<div class="p-2 flex flex-wrap gap-4">
+						<div class="flex flex-row gap-4 items-center">
+							<div class="w-16 h-16 p-2 rounded-lg bg-sw-navy dark:bg-sw-flamingo">
+								<Icon name="mdi:email" class="text-sw-secondary dark:text-sw-primary" />
+							</div>
+							<h4 class="spacewiz__text--accent block md:hidden">Email</h4>
+						</div>
+
+						<div class="flex flex-col justify-center">
+							<h4 class="spacewiz__text--accent hidden md:block">Email</h4>
+							<p>
+								Envie um email para o endereço <a href="mailto:contato@spacewiz.dev"
+									>contato@spacewiz.dev</a
+								>.
+							</p>
+						</div>
+					</div>
+
+					<div class="p-2 flex flex-wrap gap-4">
+						<div class="flex flex-row gap-4 items-center">
+							<div class="w-16 h-16 p-2 rounded-lg bg-sw-navy dark:bg-sw-flamingo">
+								<Icon name="ph:phone-call-fill" class="text-sw-secondary dark:text-sw-primary" />
+							</div>
+							<h4 class="spacewiz__text--accent block md:hidden">Telefone</h4>
+						</div>
+
+						<div class="flex flex-col justify-center">
+							<h4 class="spacewiz__text--accent hidden md:block">Telefone</h4>
+							<p>Envie uma mensagem por <a href="https://wa.me/5561993527377">WhatsApp</a> ou <a href="https://t.me/dankonobre">Telegram</a>.</p>
+						</div>
+					</div>
+
+					<div class="p-2 flex flex-wrap gap-4">
+						<div class="flex flex-row gap-4 items-center">
+							<div class="w-16 h-16 p-2 rounded-lg bg-sw-navy dark:bg-sw-flamingo">
+								<Icon name="ion:share-social" class="text-sw-secondary dark:text-sw-primary" />
+							</div>
+							<h4 class="spacewiz__text--accent block md:hidden">Redes Sociais</h4>
+						</div>
+
+						<div class="flex flex-col justify-center">
+							<h4 class="spacewiz__text--accent hidden md:block">Redes Sociais</h4>
+							<p>Faça parte do nosso <a href="https://discord.com/invite/4rAZ8HhuAh">Dscord</a> e nos siga no <a href="https://www.instagram.com/spacewiz.dev/">Instagram</a>.</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
