--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -2,9 +2,17 @@
 import Layout from '@layouts/BaseLayout.astro';
 import Hero from '@widgets/Hero.astro';
 import DividerArrowDown from '@atoms/dividers/DividerArrowDown.astro';
+
+import type { MetaSEO } from '@/metaseo';
+
+type Props = {
+	meta?: MetaSEO;
+};
+
+const {meta } = Astro.props as Props;
 ---
 
-<Layout>
+<Layout {meta}>
 	<Hero />
 	<main>
 		<slot />
