--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -8,17 +8,19 @@ import type { ImageProps } from '@widgets/projects/ProjectCarousel.astro';
 import type { PartnersProps } from '@widgets/projects/ProjectPartners.astro';
 
 import DividerArrowDown from '@atoms/dividers/DividerArrowDown.astro';
+import type { MetaSEO } from '@/metaseo';
 
 type Props = {
+	meta?: MetaSEO;
 	hero?: string;
 	carousel?: ImageProps[];
 	partners?: PartnersProps[];
 };
 
-const { hero, carousel, partners } = Astro.props as Props;
+const {meta, hero, carousel, partners } = Astro.props as Props;
 ---
 
-<Layout>
+<Layout {meta}>
 	<div class="min-h-screen spacewiz__container project">
 		<div class="pb-8 h-full bg-sw-secondary-200 dark:bg-sw-primary-700">
 			{hero && <ProjectHero src={hero} />}
@@ -32,5 +34,4 @@ const { hero, carousel, partners } = Astro.props as Props;
 		</div>
 	</div>
 	<DividerArrowDown class="fill-sw-secondary-200 dark:fill-sw-primary-700 bg-sw-coal-500" />
-
 </Layout>
