--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -72,7 +72,7 @@ const { ...props } = Astro.props as Props;
 
 						<div class="flex flex-col justify-center">
 							<h4 class="spacewiz__text--accent hidden md:block">Redes Sociais</h4>
-							<p>Faça parte do nosso <a href="https://discord.com/invite/4rAZ8HhuAh">Dscord</a> e nos siga no <a href="https://www.instagram.com/spacewiz.dev/">Instagram</a>.</p>
+							<p>Faça parte do nosso <a href="https://discord.com/invite/4rAZ8HhuAh">Discord</a> e nos siga no <a href="https://www.instagram.com/spacewiz.dev/">Instagram</a>.</p>
 						</div>
 					</div>
 				</div>
